# ophidia-primitives

./: .gitignore  AUTHORS.md  HISTORY.md  Makefile.am  NOTICE.md  README.md  bootstrap  configure.ac
import_plugin/: create_func.nomatheval.sql  create_func.sql
src/: Makefile.am  barrier.c  barrier.h  cluster.c  cluster.h  oph_abs_array.c  oph_abs_array.h  oph_accumulate.c  oph_accumulate.h  oph_affine.c  oph_affine.h  oph_aggregate_operator.c  oph_aggregate_operator.h  oph_aggregate_stats.c  oph_aggregate_stats.h  oph_aggregate_stats_final.c  oph_aggregate_stats_final.h  oph_aggregate_stats_partial.c  oph_aggregate_stats_partial.h  oph_append.c  oph_append.h  oph_arg_array.c  oph_arg_array.h  oph_arg_max_array.c  oph_arg_max_array.h  oph_arg_min_array.c  oph_arg_min_array.h  oph_bit_aggregate.c  oph_bit_aggregate.h  oph_bit_concat.c  oph_bit_concat.h  oph_bit_count.c  oph_bit_count.h  oph_bit_dump.c  oph_bit_dump.h  oph_bit_export.c  oph_bit_export.h  oph_bit_find.c  oph_bit_find.h  oph_bit_import.c  (+208 more)
